friend classes whyyyyy

--- a/AIE Year1 Framework VS2013_QuinnM/AIE Template.vcxproj
+++ b/AIE Year1 Framework VS2013_QuinnM/AIE Template.vcxproj
@@ -90,7 +90,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\GameObjConstructor.cpp" />
     <ClCompile Include="source\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\Component.h" />
+    <ClInclude Include="include\GameObjConstructor.h" />
+    <ClInclude Include="include\GameObject.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
